--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build -t mhrr/20220004:latest .
+
+    - name: Check Dockerfile with Hadolint
+      run: docker run --rm -i hadolint/hadolint < Dockerfile
       
     - name: Log in to Docker Hub
       run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-
+      
     - name: Push Docker image to Docker Hub
       run: docker push mhrr/20220004:latest
