--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,9 +18,9 @@ jobs:
       run: docker build -t mhrr/20220004:latest .
 
     - name: Hadolint
-    - uses: actions/checkout@v3
     - uses: hadolint/hadolint-action@v3.1.0
       with:
+        dockerfile: Dockerfile
         fail-on: warning,error
       
     - name: Log in to Docker Hub
