--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,18 +7,15 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build -t mhrr/20220004:latest .
 
     - name: Hadolint
-    - uses: hadolint/hadolint-action@v3.1.0
+      uses: hadolint/hadolint-action@v3.1.0
       with:
         dockerfile: Dockerfile
         fail-on: warning,error
