--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,13 +7,16 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
+      
     - name: Build the Docker image
-      run: docker build -t mhrr/20220004:latest .
-
+      run: |
+        docker build -t mhrr/20220004:latest .
+      
     - name: Hadolint
       uses: hadolint/hadolint-action@v3.1.0
       with:
@@ -21,7 +24,43 @@ jobs:
         fail-on: warning,error
       
     - name: Log in to Docker Hub
-      run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      run: |
+        echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       
     - name: Push Docker image to Docker Hub
       run: docker push mhrr/20220004:latest
+
+    - name: Log in to Azure Container Registry
+      uses: docker/login-action@v1
+      with: 
+        registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+
+    - name: Build and push Docker image to ACR
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/efrei-devops-tp2:latest
+      env:
+        OPENWEATHER_API: ${{ secrets.API_OPENWEATHER }}
+
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: 'Deploy to Azure Container Instance'
+      uses: azure/aci-deploy@v1
+      with:
+        resource-group: ${{ secrets.RESOURCE_GROUP }}
+        dns-name-label: devops-${{ secrets.RESOURCE_GROUP }}
+        image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/efrei-devops-tp2:latest
+        name: efrei-devops-tp2
+        location: 'francecentral'
+        registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+        registry-username: ${{ secrets.REGISTRY_USERNAME }}
+        registry-password: ${{ secrets.REGISTRY_PASSWORD }}
+        secure-environment-variables: OPENWEATHER_API_KEY=${{ secrets.API_OPENWEATHER }}
