update docker image for azure TP 3

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,7 +43,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/efrei-devops-tp2:latest
+        tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/20220004:latest
       env:
         OPENWEATHER_API: ${{ secrets.API_OPENWEATHER }}
 
@@ -57,8 +57,8 @@ jobs:
       with:
         resource-group: ${{ secrets.RESOURCE_GROUP }}
         dns-name-label: devops-${{ secrets.RESOURCE_GROUP }}
-        image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/efrei-devops-tp2:latest
-        name: efrei-devops-tp2
+        image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/20220004:latest
+        name: 2022004
         location: 'francecentral'
         registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         registry-username: ${{ secrets.REGISTRY_USERNAME }}
