--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -56,7 +56,7 @@ jobs:
       uses: azure/aci-deploy@v1
       with:
         resource-group: ${{ secrets.RESOURCE_GROUP }}
-        dns-name-label: devops-${{ secrets.RESOURCE_GROUP }}
+        dns-name-label: devops-20220004
         image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/20220004:latest
         name: 20220004
         location: 'francecentral'
