update docker image for azure TP 3 1.5

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,7 +43,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/20220004:latest
+        tags: mhrr/20220004:latest
       env:
         OPENWEATHER_API: ${{ secrets.API_OPENWEATHER }}
 
