--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,7 +43,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: mhrr/20220004:latest
+        tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/20220004:latest
       env:
         OPENWEATHER_API: ${{ secrets.API_OPENWEATHER }}
 
@@ -64,3 +64,4 @@ jobs:
         registry-username: ${{ secrets.REGISTRY_USERNAME }}
         registry-password: ${{ secrets.REGISTRY_PASSWORD }}
         secure-environment-variables: OPENWEATHER_API_KEY=${{ secrets.API_OPENWEATHER }}
+        ports: 8081:8081
