--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,8 +44,6 @@ jobs:
         file: ./Dockerfile
         push: true
         tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/20220004:latest
-      env:
-        OPENWEATHER_API: ${{ secrets.API_OPENWEATHER }}
 
     - name: 'Login via Azure CLI'
       uses: azure/login@v1
@@ -55,12 +53,12 @@ jobs:
     - name: 'Deploy to Azure Container Instance'
       uses: azure/aci-deploy@v1
       with:
-        name: 20220004
         resource-group: ${{ secrets.RESOURCE_GROUP }}
-        location: 'francecentral'
         dns-name-label: devops-20220004
         image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/20220004:latest
+        name: 20220004
+        location: francecentral
         registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         registry-username: ${{ secrets.REGISTRY_USERNAME }}
         registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-        secure-environment-variables: OPENWEATHER_API=${{ secrets.API_OPENWEATHER }}
+        secure-environment-variables: API_OPENWEATHER=${{ secrets.API_OPENWEATHER }}
