--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -61,4 +61,4 @@ jobs:
         registry-login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         registry-username: ${{ secrets.REGISTRY_USERNAME }}
         registry-password: ${{ secrets.REGISTRY_PASSWORD }}
-        secure-environment-variables: API_OPENWEATHER=${{ secrets.API_OPENWEATHER }}
+        secure-environment-variables: API_KEY=${{ secrets.API_KEY }}
